<resources>
    <string name="app_name">anwbassesment</string>
    <string name="jakewharton">JakeWharton</string>
    <string name="infinum">infinum</string>
    <string name="select_your_repository">Select your Repository</string>
    <string name="repo_name">Repo Name</string>
    <string name="repo_description">Here goes the repo description</string>
    <string name="last_update">Last update</string>
    <string name="avatar_image">Avatar_image</string>
    <string name="loading">Loading</string>
    <string name="cancel">Cancel</string>
    <string name="ignaciosamba">IgnacioSamba</string>
    <string name="search_your_github_title">Search your GitHub</string>
    <string name="user_name_search">User Name</string>
    <string name="search">Search</string>
</resources>
