<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#613d97">

    <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:background="@drawable/icon_github"
            android:id="@+id/imageButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/title_search_id"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.92"/>

    <TextView
            android:id="@+id/title_search_id"
            android:text="@string/search_your_github_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="280dp" app:layout_constraintHorizontal_bias="0.496"/>

    <EditText
            android:id="@+id/user_name_edit_search_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:inputType="textPersonName"
            android:hint="@string/user_name_search"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/title_search_id"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:id="@+id/search_button_id"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/user_name_edit_search_id"
            android:padding="15dp"
            android:background="@drawable/btn_rounded"/>
</androidx.constraintlayout.widget.ConstraintLayout>